# pigeon

./: README.md  demo.md  requirements.txt
model/adrs/: 000X-adr-template.md  adr-4.md
pigeon-client/: Dockerfile  README.md  pigeon_id.txt  pyproject.toml
pigeon-client/client/: __init__.py  api.txt  test_client.py
pigeon-client/client/encryption/: pigeonhammer.py
pigeon-client/client/models/: chats.py  users.py
pigeon-client/client/networking/: server_messages.py
pigeon-client/client/static/css/: style.css
pigeon-client/client/templates/: contacts.html  dashboard.html  login.html  register.html
pigeon-server/: Dockerfile  Dockerfile.dev  autoscaling.tf  db.tf  docker-compose.yml  ecs.tf  endpoints.http  image.tf  k6.js  lb.tf  main.tf  pyproject.toml
pigeon-server/server/: __init__.py
pigeon-server/server/models/: server.py
pigeon-server/server/views/: routes.py
