[tool.poetry]
name = "pigeon-client"
version = "0.1.0"
description = ""
authors = ["kat <kaitklake@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
